--- a/footer/_navbar.scss
+++ b/footer/_navbar.scss
@@ -2,8 +2,8 @@
 $primary-color: #8f25D6;
 $btn-bg-color: black;
 $btn-color: white;
-$tablet:800px;
-$mobile:375px;
+$tablet:968px;
+$mobile:400px;
 //MIXIN //
 @mixin tablet {
     @media (max-width: #{$tablet}) {
@@ -17,66 +17,68 @@ $mobile:375px;
     }
 }
 
-.header {
-    position: fixed;
-    margin-top: -20px;
-    height: 100px;
-    padding: 0 10px;
+.hilmi-header {
+    display: flex;
+    flex-flow: wrap row;
+    justify-content: space-between;
+    font-size: 1rem;
+    align-items: center;
+    max-width: 100%;
     color: $btn-color;
     background: $primary-color;
-    opacity: .9;
-    z-index: 20;
-    width: 100vw;
-    margin-left: -50px;
-    @include mobile() {
-        height: 0px;
+    @include mobile() {}
+    @include tablet() {}
+    height: 100px;
+    ul{
+        padding: 0;
     }
-    @include tablet() {
-        width: 100vw;
-        margin-left: -35px;
-    }
+    
+    
 }
 
 .logo {
     line-height: 100px;
-    float: left;
+    
     color: $primary-color;
-    margin-left: 60px;
-    font-size: 35px;
+    font-size: 2rem;
     color: $btn-color;
     cursor: pointer;
-    @include tablet() {
-        margin: 0px;
-        margin-left: 40px;
-    
-    }
+    margin-left: 20px;
+    position: relative;
+    bottom: 28px;
+    @include tablet() {}
     @include mobile() {
         font-size: 30px;
     }
 }
 
 .menu {
-    float: right;
-    line-height: 100px;
-    margin-left: 240px;
+    display: flex;
+    flex-wrap: wrap;
     @include tablet() {
         margin-right: 0px;
     }
 }
 
 .menu a {
+    margin:  0 20px 48px 20px;
+    padding:  10px 30px;
     color: $btn-color;
     text-transform: uppercase;
     text-decoration: none;
     font-weight: bold;
-    padding: 0 40px;
-    transition: 0.4s;
+    transition: 0.6s;
+
+    @media (max-width: 1215px) {
+        padding:  10px 20px;
+        margin:  0 10px 48px 10px;
+    }
     &:hover {
         background-color: $btn-color;
         border-radius: 30px;
-        padding: 10px;
-        padding-right: 20px;
-        font-style: unset;
+        padding:  10px 30px;
+       
+       
         color: $primary-color;
         transition: .5s;
     }
@@ -96,11 +98,12 @@ $mobile:375px;
 
 .show-menu-btn i {
     line-height: 100px;
+    margin: 8px 20px 50px 9px;
 }
 
 #chk {
     position: absolute;
-    visibility: hidden;
+    display: none;
 }
 
 @include tablet() {
@@ -109,28 +112,34 @@ $mobile:375px;
         display: block;
     }
     .menu {
-        position: fixed;
+        display: none;
         width: 100%;
         height: 100vh;
         background: $primary-color;
         right: -100%;
-        top: 0;
         text-align: center;
         padding: 80px 0;
         line-height: normal;
         transition: 0.7s;
         z-index: 10;
+        position: relative;
+        bottom: 80px;
     }
     .menu a {
-        display: block;
-        padding: 20px;
+        margin: 20px;
     }
     .hide-menu-btn {
         position: absolute;
-        top: 40px;
-        right: 40px;
+        top: 550px;
+        right: 315px;
+        @include mobile() {
+            display: none;
+        }
     }
     #chk:checked~.menu {
+        display: flex;
+        flex-direction: column;
+        opacity: 0.7;
         right: 0;
     }
 }
