--- a/service/style.css
+++ b/service/style.css
@@ -54,8 +54,8 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column column column;
-          flex-direction: column column column;
+      -ms-flex-direction: column column column column;
+          flex-direction: column column column column;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   margin: auto;
