--- a/service/style.scss
+++ b/service/style.scss
@@ -49,7 +49,7 @@ body {
 
 .Ssection1 {
     display: flex;
-    flex-direction: column column column;
+    flex-direction: column column column column;
     flex-wrap: wrap;
     margin: auto;
     justify-content: space-around;
