--- a/Foter2/style.css
+++ b/Foter2/style.css
@@ -7,101 +7,84 @@ body {
   padding: 0;
 }
 
-.fsection1 {
-  background-image: url(img/photodefotre.jpg);
+body .fsection1 {
+  background-image: url(img/foter.jpg);
   background-size: cover;
   width: 100%;
   height: 500px;
 }
 
-.fcontact {
-  color: #ffffff;
-  text-transform: capitalize;
-  text-align: center;
+body .fsection1 .fcontact {
   position: relative;
-  top: 200PX;
+  top: 200px;
   font-size: 70px;
+  color: #ffffff;
+  text-align: center;
   margin-top: 0;
 }
 
-.fcontact:hover {
-  color: #b227e9;
-}
-
-@media (max-width: 375px) {
-  .fcontact {
-    font-size: 40px;
-    padding: 30px;
+@media (max-width: 500px) {
+  body .fsection1 .fcontact {
+    font-size: 30px;
   }
 }
 
-.finputs {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 10px auto 0;
-  width: 60%;
+body .fsection1 .fcontact:hover {
+  color: #a17a3e;
 }
 
-@media (max-width: 800px) {
-  .finputs {
-    width: 80%;
-  }
-}
-
-.finputs .finputs1 {
+body .finputs .finputs1 {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row;
-          flex-flow: row;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 10px 10px;
 }
 
-@media (max-width: 800px) {
-  .finputs .finputs1 {
+@media (max-width: 500px) {
+  body .finputs .finputs1 {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-flow: column;
-            flex-flow: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 50%;
+    margin-left: 20%;
   }
 }
 
-.finputs .finputs1 .non {
-  width: 80%;
-  height: 40px;
-  margin: 10px;
+body .finputs .finputs1 .non {
+  border: 1.3px solide #bc93fd;
   border-radius: 10px;
+  width: 30%;
+  height: 40px;
   border: 1.3px solid #bc93fd;
+  margin: 10px;
 }
 
-.finputs .message {
+@media (max-width: 500px) {
+  body .finputs .finputs1 .non {
+    padding: 4px 85% 4px 2px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+body .message {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  width: 99%;
+  width: 61%;
   height: 250px;
   border-radius: 10px;
   margin: 10px 10px;
-  border: 1.3px solid #bc93fd;
+  border: 1px solid #bc93fd;
   padding-bottom: 200px;
+  margin-left: 20%;
 }
 
 footer {
@@ -385,142 +368,5 @@ footer .copy h6 {
   font-weight: 100;
   margin: 0 auto;
   padding: 0;
-}
-
-.header {
-  position: fixed;
-  margin-top: -20px;
-  height: 100px;
-  padding: 0 10px;
-  color: white;
-  background: #8f25D6;
-  opacity: .9;
-  z-index: 20;
-  width: 100vw;
-  margin-left: -50px;
-}
-
-@media (max-width: 375px) {
-  .header {
-    height: 0px;
-  }
-}
-
-@media (max-width: 800px) {
-  .header {
-    width: 100vw;
-    margin-left: -35px;
-  }
-}
-
-.logo {
-  line-height: 100px;
-  float: left;
-  color: #8f25D6;
-  margin-left: 60px;
-  font-size: 35px;
-  color: white;
-  cursor: pointer;
-}
-
-@media (max-width: 800px) {
-  .logo {
-    margin: 0px;
-    margin-left: 40px;
-  }
-}
-
-@media (max-width: 375px) {
-  .logo {
-    font-size: 30px;
-  }
-}
-
-.menu {
-  float: right;
-  line-height: 100px;
-  margin-left: 240px;
-}
-
-@media (max-width: 800px) {
-  .menu {
-    margin-right: 0px;
-  }
-}
-
-.menu a {
-  color: white;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-weight: bold;
-  padding: 0 40px;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.menu a:hover {
-  background-color: white;
-  border-radius: 30px;
-  padding: 10px;
-  padding-right: 20px;
-  font-style: unset;
-  color: #8f25D6;
-  -webkit-transition: .5s;
-  transition: .5s;
-}
-
-.show-menu-btn,
-.hide-menu-btn {
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  font-size: 30px;
-  cursor: pointer;
-  display: none;
-}
-
-.show-menu-btn {
-  float: right;
-}
-
-.show-menu-btn i {
-  line-height: 100px;
-}
-
-#chk {
-  position: absolute;
-  visibility: hidden;
-}
-
-@media (max-width: 800px) {
-  .show-menu-btn,
-  .hide-menu-btn {
-    display: block;
-  }
-  .menu {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: #8f25D6;
-    right: -100%;
-    top: 0;
-    text-align: center;
-    padding: 80px 0;
-    line-height: normal;
-    -webkit-transition: 0.7s;
-    transition: 0.7s;
-    z-index: 10;
-  }
-  .menu a {
-    display: block;
-    padding: 20px;
-  }
-  .hide-menu-btn {
-    position: absolute;
-    top: 40px;
-    right: 40px;
-  }
-  #chk:checked ~ .menu {
-    right: 0;
-  }
 }
 /*# sourceMappingURL=style.css.map */
