--- a/service/style.scss
+++ b/service/style.scss
@@ -1,408 +1,221 @@
+/*******************************************desktop****************************************************/
 $color1: #8f25D6;
 $color2: #fff;
 $color:#000;
 $font-family: 'Montserrat',
 sans-serif;
 
-body {
-    font-family: 'Montserrat', sans-serif;
+.header-service {
     width: 100%;
-    margin: 0px;
-}
-
-.stitre {
-    color: $color1;
-    margin-bottom: 40px;
-    text-align: center;
-    text-decoration: underline;
-}
-
-.S0 {
-    color: $color;
-}
-
-.svideo {
-    width: 80%;
-    height: 70%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    margin: auto;
-    width: 99%;
-}
-
-.Spara {
-    text-align: center;
-    text-decoration: underline $color1;
-    margin: 5%;
-    font-size: 25px;
-}
-
-.sp1 {
-    color: $color1;
-}
-
-.para1 {
+    margin: 0;
     font-family: $font-family;
-    font-size: 80%;
-}
-
-.Ssection1 {
-    display: flex;
-    flex-direction: column column column column;
-    flex-wrap: wrap;
-    margin: auto;
-    justify-content: space-around;
-}
-
-.ssection3 {
-    background-image: url(images/agence-web.png);
-    text-align: center;
-}
-
-.StitreD {
-    color: $color2;
-    text-align: center;
-    font-size: 30px;
-    padding: 5%;
-    line-height: 10%;
-}
-
-.btR {
-    float: left;
-    border-radius: 50px;
-    border: none;
-    position: relative;
-    left: 10px;
-    width: 10%;
-    padding: 15px;
-    background-color: $color2;
-    color: $color;
-    font-size: 20px;
-}
-
-.btb {
-    padding: 25px;
-    border-radius: 50px;
-    border: none;
-    background-color: $color2;
-    font-size: 30px;
-    width: 30%;
-    border: 1px solid black;
-    transition: 10s;
-    overflow: hidden;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    background-color: rgb(221, 230, 226);
-    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
-    color: #fff;
-    transform: translateY(-7px);
-}
-
-.Ssection1 i {
-    font-size: 700%;
-}
-
-.ser {
-    position: relative;
-    right: 50px;
-}
-
-.StitreF {
-    color: $color2;
-    font-size: 30px;
-}
-
-.sp2 {
-    color: $color;
-    font-size: 30px;
-}
-
-.fab {
-    margin: 1px 40px;
-    border-radius: 500px;
-}
-
-
-/****************************************fin de version desktop*************************************************/
-
-
-/*tablet*/
-
-@media (max-width:781px) {
-    body {
-        margin: 0;
-        padding: 0;
-    }
-
-    .svideo {
-        @media (max-width: 1130px) {
-            margin-top: 5%;
-            display: flex;
-        }
-    }
-
-    .Spara {
-        font-size: 70%;
-        text-align: center;
-        position: relative;
-        right: 1%;
-        margin-bottom: 80px;
-    }
-
-    .stitre {
-        font-size: 150%;
-        margin-bottom: -12px;
-    }
-
-    .Spart1 {
-        font-size: 90%;
-    }
-
-    .Ssection1 i {
-        font-size: 300%;
-    }
-
-    .para1 {
-        font-size: 80%;
-        padding: 8%;
-        position: relative;
-    }
-
-    .btn {
-        height: 29px;
-        width: 100px;
-        padding: 200px;
-    }
-
-    .StitreD {
-        font-size: 120%;
-        margin: 10px;
-        line-height: 150%;
-    }
-
-    .StitreF {
-        font-size: 100%;
-        margin-top: -20px;
-    }
-
-    .sp2 {
-        font-size: 100%;
-    }
-
-    .btb {
-        width: 200px;
-        height: 55px;
-        font-size: 80%;
-    }
-
-    .ser {
-        font-size: 100%;
-        margin: 10px;
-        position: relative;
-        right: 15px;
-        padding: 3%;
-    }
-
-    .btR {
-        height: 1px;
-        width: 70px;
-        font-size: 70%;
-    }
-
-    i.fab {
-        font-size: 30px;
-    }
-}
-
-@mixin shad {
-    width: 300px;
-    height: 400px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    text-align: center;
-    border-radius: 2%;
-    margin: 10px;
-    border-left: 10px $color1 solid;
-
-    @media (max-width: 781px) {
-        margin: 0;
-        margin-bottom: 20%;
-        margin-left: 10px;
-    }
-
-    @media (max-width:375px) {
-        margin: 0;
-        margin-bottom: 10%;
-        margin-left: 9%;
-        width: 250px;
-    }
-}
-
-.Spartie3 {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    @include shad
-}
+    flex-wrap: wrap;
 
-.spartie1 {
-    @include shad
-}
+    .titre1 {
+        color: $color1;
+        margin-bottom: 40px;
+        text-align: center;
+        text-decoration: underline;
+    }
 
-.Spartie2 {
-    @include shad
-}
+    .span1 {
+        color: $color;
+    }
 
-.Spartie4 {
-    @include shad
-}
-
-.Spartie5 {
-    @include shad
-}
-
-.Spartie6 {
-    @include shad
-}
-
-@import"./style";
-
-/*mobile*/
-
-@media (max-width:600px) {
-    body {
-        width: 375;
-        padding: 0;
+    .background-video {
+        background-color: $color;
+        width: 100%;
         margin: 0;
     }
 
-    .stitre {
-        font-size: 190%;
-        margin-right: 10%;
-    }
-
-    .svideo {
-        width: 100%;
-        margin-left: -5px;
-
-        @media (max-width:500px) {
-            margin-bottom: 10px;
-
-        }
-    }
-
-    .Spara {
-        font-size: 120%;
-        max-width: 80%;
-        margin-left: 90px;
-    }
-
-    .Ssection1 {
-        @media (max-width:600px) {
-            margin-left: 20%;
-
-        }
-
-        @media (max-width:500px) {
-            margin-left: 10%;
-
-        }
-
+    .video {
+        width: 50%;
+        height: 70%;
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+
+        @media(max-width: 500px) {
+            width: 70%;
+        }
 
     }
 
-    .Spart1 {
-        font-size: 120%;
+    .titre2 {
+        text-align: center;
+        text-decoration: underline;
+        font-size: 90%;
     }
 
-    .para1 {
+    .span2 {
+        color: $color1;
+    }
+}
+
+@mixin carte {
+    width: 60%;
+    height: 30vw;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+    border-radius: 2%;
+    margin: 18%;
+    border-left: 10px $color1 solid;
+
+    @media(max-width: 1046px) {
+        height: 89%;
+
+    }
+
+    @media(max-width: 966px) {
+        width: 40%;
+        height: 75%;
+    }
+
+    @media(max-width: 450px) {
+        width: 60%;
+    }
+}
+
+.section1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+    /***********************************tablette*************************************************************/
+    @media(max-width:1046px) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+        justify-items: center;
+
+    }
+
+    @media(max-width: 966px) {
+        display: grid;
+        grid-template-columns: 1fr;
+        align-items: center;
+        justify-items: center;
+
+    }
+
+    /**********************************tablette*****************************************************************/
+    /**********************************mobile******************************************************************/
+
+
+
+    .carte1 {
+        @include carte
+    }
+
+    .carte2 {
+        @include carte
+    }
+
+    .carte3 {
+        @include carte
+    }
+
+    .carte4 {
+        @include carte
+    }
+
+    .carte5 {
+        @include carte
+    }
+
+    .carte6 {
+        @include carte
+    }
+
+    i {
+        font-size: 5vw;
+    }
+
+    .paragraphe {
         font-size: 70%;
-        padding: 10%;
-    }
-
-    .btn {
-        width: 120px;
-        height: 40px;
-        margin-top: 20%;
-    }
-
-    .StitreD {
-        margin: 10%;
-        position: relative;
-        right: 20px;
-        line-height: 50px;
-    }
-
-    .StitreF {
-        margin-right: 30%;
-        position: relative;
-        bottom: 60px;
-        margin-left: 150px;
-    }
-
-    .btb {
-        position: relative;
-        bottom: 50px;
-        margin-right: 40px;
-        font-size: 130%;
-        height: 80px;
-        width: 300px;
-    }
-
-    .btR {
-        font-size: 130%;
-        height: 50px;
-        width: 110px;
-    }
-
-    i.fab {
-        font-size: 40px;
-        margin-left: 10px;
-    }
-
-    .Spara {
-        font-size: 120%;
         max-width: 80%;
-        margin-left: 90px;
+        margin: 10%;
+
     }
 
-    .Spart1 {
-        font-size: 120%;
+    @import"./style";
+}
+
+.footer-service {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    background-image: url(images/agence-web.png);
+    text-align: center;
+
+    @media(max-width: 1046px) {
+        margin-top: 10%;
     }
 
-    .para1 {
+    .titre4 {
+        color: $color2;
+        text-align: center;
+        font-size: 2vw;
+        line-height: 10%;
+
+    }
+
+    .span3 {
+        color: $color;
+    }
+
+    .btn-R {
+        float: left;
+        border-radius: 50px;
+        border: none;
+        position: relative;
+        left: 10px;
+        width: 10%;
+        padding: 15px;
+        background-color: $color2;
+        color: $color;
+        font-size: 20px;
+
+        /*********************************tablete******************************************************************/
+        @media(max-width:869px) {
+            width: 15%;
+        }
+
+        @media(max-width:500px) {
+            width: 30%;
+        }
+
+        @media(max-width:450px) {
+            width: 25%;
+
+        }
+    }
+
+    /*********************************tablete******************************************************************/
+    .btn-B {
+        padding: 15px;
+        border-radius: 50px;
+        border: none;
+        background-color: $color2;
+        font-size: 2vw;
+        width: 30%;
+        position: absolute;
+        left: 35%;
+        margin-top: 9%;
+    }
+
+    .fab {
+        font-size: 90%;
+    }
+}
+
+/********************************************fin desktop*******************************************************/
+.titre3 {
+    @media(max-width: 966px) {
         font-size: 70%;
-        padding: 10%;
-    }
-
-    .btn {
-        width: 120px;
-        height: 40px;
-        margin-top: 20%;
-    }
-
-    .StitreF {
-        margin-right: 30%;
-        position: relative;
-        bottom: 60px;
-        margin-left: 100px;
-        line-height: 40px;
-    }
-
-    .btb {
-        position: relative;
-        bottom: 50px;
-        margin-right: 40px;
-        font-size: 130%;
-        height: 80px;
-        width: 300px;
-    }
-
-    .btR {
-        font-size: 130%;
-        height: 50px;
-        width: 110px;
     }
 }
